# dendritex

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  changelog.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  Publish.yml
dendritex/: __init__.py  _base.py  _base_test.py  _integrators.py  _misc.py
dendritex/channels/: __init__.py  calcium.py  hyperpolarization_activated.py  leaky.py  potassium.py  potassium_calcium.py  sodium.py
dendritex/ions/: __init__.py  calcium.py  potassium.py  sodium.py
dendritex/neurons/: __init__.py  hh.py  multi_compartment.py  single_compartment.py
docs/: auto_generater.py  conf.py  index.rst
docs/apis/: dendritex.channels.rst  dendritex.ions.rst  dendritex.neurons.rst  dendritex.rst  integration.rst
examples/: fitting_simple_dendrite_model.py  hh.py  hh_neuron.py  simple_dendrite_model.py  simple_dendrite_model2.py  simple_dendrite_model_fitting_by_adam.py  simple_dendrite_model_simulation.py  thalamus_single_compartment_neurons.py
examples/fitting_a_hh_neuron/: main.py
examples/golgi_model/: golgi.ipynb  golgi.py  golgi_mophology.py  golgi_morphology.npz
test/: test.txt
